tests/success/double_tuple_decomposition.bz
function main()
{
	// let [...[_]] = [ [ 0 ] ];
	let [[_]] = [ [ 0 ] ];
}
