tests/error/comptime/check_dereference01.bz
function test()
{
	(consteval {
		let i = 0;
		let p = &i + 1;
		*p;
	});
}
